# libsecam

./: CMakeLists.txt  README.md  libsecam.h
.github/workflows/: cmake.yml
secamiz0r/: CMakeLists.txt  README.md  secamiz0r.c  secamiz0r_ex.c
ueit/: CMakeLists.txt  ueit.c
